# OS-Webcrawler

./: CMakeLists.txt  CMakeUserPresets.json  Installion Guide.md  README.md  app  run.sh  scraper.cpp
data/: archlinux.org.txt
